# gtest2conti

./: .cproject  .project  CMakeLists.txt  README.md  main.cpp  maintest.cpp  mathfixt.h
include/: addition.h  additionmock.h  math.h  subtraction.h  subtractionmock.h
src/: addition.cpp  additionmock.cpp  math.cpp  subtraction.cpp  subtractionmock.cpp
